k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec: 
  replicas: 3
  selector:
    matchLabels: 
      component: web # must match
  template:
    metadata:
      labels:
        component: web # must match
    spec:
      containers:
        - name: client
          image: bryjos44/fibcalculator-client
          ports:
            - containerPort: 3000
