k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec: 
  replicas: 3
  selector:
    matchLabels: 
      component: server # must match
  template:
    metadata:
      labels:
        component: server # must match
    spec:
      containers:
        - name: server
          image: bryjos44/fibcalculator-api
          ports:
            - containerPort: 5000
