k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec: 
  replicas: 1
  selector:
    matchLabels: 
      component: worker # must match
  template:
    metadata:
      labels:
        component: worker # must match
    spec:
      containers:
        - name: worker
          image: bryjos44/fibcalculator-worker
