k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web # this is the object the ClusterIP is pointed at
  ports:
    - port: 3000 # is the property other pods use to get access to this pod
      targetPort: 3000 # port of the target pod, providing access
      # there is not a nodePort because this pod does not have access from
      # outside of the cluster
