k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: redis # this is the object the ClusterIP is pointed at
  ports:
    - port: 6379 # is the property other pods use to get access to this pod
      targetPort: 6379 # port of the target pod, providing access
      # there is not a nodePort because this pod does not have access from
      # outside of the cluster
