k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server # this is the object the ClusterIP is pointed at
  ports:
    - port: 5000 # is the property other pods use to get access to this pod
      targetPort: 5000 # port of the target pod, providing access
      # there is not a nodePort because this pod does not have access from
      # outside of the cluster
